# ba-ebdp-toolkit

./: .gitignore  README.md  data_extracting.md  data_loading.md  permissions.sql  pyproject.toml
.github/workflows/: publish_package.yml
case_data/: barcelona_network_extent.gpkg
deprecated/: download_overture_bbox.py  overture_downloaders.py
lightweight/: data_load.py
src/: raw_landuse_schema.csv  shape.py  sql.md  structures.py  tools.py
src/analysis/: dataset.py  process.md  vis.py
src/cases/: barcelona_case.py  graph_corrections.py
src/data/: download_overture_bbox.py  generate_boundary_polys.py  ingest_overture_buildings.py  ingest_overture_infrast.py  ingest_overture_infrastructure.py  ingest_overture_networks.py  ingest_overture_places.py  load_bldg_hts_raster.py  load_buildings.py  load_data_bbox.py  load_overture_bbox.py  load_overture_data.py  load_places.py  load_streets.py  load_urban_atlas.py  load_urban_atlas_blocks.py  load_urban_atlas_trees.py  loaders.py  notes.md  overture_downloaders.py  prepare_boundaries.py  prepare_boundary_polys.py
src/pre_processing/: prepare_streets.py
src/preparation/: prepare_streets.py
src/processing/: clean_networks.py  generate_metrics.py  generate_networks.py  metrics_centrality.py  metrics_green.py  metrics_green_alt.py  metrics_green_convolve.py  metrics_landuses.py  metrics_morphology.py  metrics_population.py  metrics_stats.py  processors.py
src/processing/deprecated/: metrics_centrality.py  metrics_green.py  metrics_green_conv.py
src/views/: generate_location.py  generate_takeoff.py  prep_bldgs_blocks.py  sql.md
tests/: conftest.py  test_tools.py
tests/preparation/: test_prepare_streets.py
workflows/: landuse_schema_osm.py  landuse_schema_overture.py  osm_schema.py  util.py
