[project]
name = "twin2expand"
version = "0.0.1"
description = ""
authors = [
    {name = "Gareth Simons", email = "garethsimons@me.com"},
]
dependencies = [
    "duckdb>=0.8.1",
    "geopandas>=0.13.2",
    "pyarrow>=12.0.1",
    "fastparquet>=2023.7.0",
    "ipykernel>=6.25.0",
    "networkx>=3.1",
    "pandas>=2.0.3",
    "shapely>=2.0.1",
    "tqdm>=4.65.0",
    "asyncpg>=0.28.0",
    "sqlalchemy>=2.0.19",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPLv3"}

